railway deploy config

--- a/railway.toml
+++ b/railway.toml
@@ -1,1 +1,15 @@
- 
+[build]
+builder = "nixpacks"
+buildCommand = "npm run build"
+
+[deploy]
+startCommand = "npm start"
+restartPolicyType = "on_failure"
+restartPolicyMaxRetries = 10
+
+[deploy.healthcheck]
+path = "/"
+initialDelay = 10
+timeoutSeconds = 5
+intervalSeconds = 10
+maxRetries = 3 
