--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@sequelize/postgres": "^7.0.0-alpha.46",
     "@types/cors": "^2.8.17",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^5.1.0",
     "morgan": "^1.10.0",
     "pg": "^8.15.2",
