--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@types/sequelize": "^4.28.20",
     "@typescript-eslint/eslint-plugin": "^7.1.1",
     "@typescript-eslint/parser": "^7.1.1",
+    "@vercel/node": "^5.1.14",
     "eslint": "^8.57.0",
     "nodemon": "^3.1.0",
     "ts-node": "^10.9.2",
